[package]
name = "forensics"
version = "0.1.0"
edition = "2021"
authors = ["jobusam"]

[dependencies]
# clap for cli parsing
clap = "3.0.0-beta.2"
# http requests
ureq = "2.0.2"
# html parsing
select = "0.5.0"
# time handling
chrono = "0.4.19"
# retrieve socket informations
netstat2 = "0.9"
# retrieve system informationss
sysinfo = "0.21.2"